<?xml version="1.0" encoding="utf-8"?>


<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="480dp"
    android:layout_marginBottom="25dp"
    >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/thumbnail"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_alignParentTop="true"
            android:scaleType="centerCrop"
            android:src="@drawable/unifavip" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/thumbnail"
            android:maxLines="3"
            android:padding="8dp"
            android:text="@string/titleGrid"
            android:textColor="#222"
            android:textStyle="bold"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/data_publicacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:maxLines="3"
            android:padding="8dp"
            android:text="@string/data_publicacao"
            android:textColor="#666"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/texto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/data_publicacao"
            android:maxLines="3"
            android:padding="5dp"
            android:text="@string/texto"
            android:textColor="#222"
            android:textSize="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/texto">

            <Button
                android:id="@+id/botaoMostraMais"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/texto"
                android:text="@string/mostraMais"
                android:layout_weight="1"

                />

            <Button

                android:id="@+id/botaoCompartilha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Compartilhar"
                android:layout_below="@id/texto"
                android:layout_toRightOf="@id/botaoMostraMais"
                android:layout_weight="1"

                />

        </LinearLayout>


    </RelativeLayout>
</android.support.v7.widget.CardView>